k8s/clusters/phx/apps/uptime-kuma/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    external-dns.alpha.kubernetes.io/hostname: uptime.jaxon.cloud
    external-dns.alpha.kubernetes.io/target: 85.31.234.30
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.jaxon.cloud`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    certResolver: letsencrypt
